# scraper

./: .gitignore  README.md  TEST_COMMANDS.md  pyproject.toml  pytest.ini  rag_crawler.py  requirements.txt
scraper/: __init__.py  config.py
scraper/api/: __init__.py  batch_scraper.py  rag_scraper.py  scraper_api.py
scraper/core/: __init__.py  crawler.py  scraper.py
scraper/extractors/: __init__.py  base.py  basic.py  rag.py
scraper/utils/: __init__.py  data_save.py  url_filter.py
tests/: conftest.py  run_tests.py  test_api.py  test_config.py  test_crawler.py  test_extractors.py  test_integration.py  test_scraper.py  test_utils.py
